# opencryptoki

./: .gitignore  .gitmodules  .indent.pro  .travis.yml  64_bit_fix.diff  AUTHORS  CONTRIBUTING.md  COPYING  COPYRIGHTS  ChangeLog  FAQ  INSTALL  LICENSE  Makefile.am  NEWS  README  README.md  RHEL4_pkcsslotd_init.patch  TODO  bootstrap.sh  cleanup.sh  configure.ac  configure.in  kill-all  mkinstalldirs  opencryptoki.map  opencryptoki_tok.map
misc/: Makefile.am  mech_list.c  mech_types.h  migrate_from_2.1_to_2.2.sh  misc.mk  opencryptoki-stdll.conf.in  opencryptoki.conf.in  opencryptoki.gdb  opencryptoki.pc.in  pkcsslotd.in  pkcsslotd.service.in  rsa_parser.pl  test_mech_list.c  tmpfiles.conf.in
multi_token_tests/: Makefile.am  ock_multi_token.c
testcases/: Makefile.am  README  ciconfig.sh  cleanup_vhsm.exp.in  init_cca.sh  init_token.sh  init_token.sh.in  init_tpmtoken.sh  init_vhsm.exp.in  ock_tests.sh  ock_tests.sh.in  testcases.mk
testcases/common/: Makefile.am  common.c  common.mk
testcases/crypto/: Makefile.am  README  abfunc.c  aes.h  aes_func.c  crypto.mk  des.h  des3.h  des3_func.c  des_func.c  dh_func.c  digest.h  digest_func.c  dilithium.h  dilithium_func.c  dsa_func.c  ec.h  ec_func.c  ibm_ml_dsa.h  ibm_ml_dsa_func.c  ibm_ml_kem.h  ibm_ml_kem_func.c  kyber.h  kyber_func.c  mech_to_str.h  ml_dsa.h  ml_dsa_func.c  ml_kem.h  ml_kem_func.c  rsa.h  rsa_func.c  rsaupdate_func.c  ssl3_func.c
testcases/driver/: Makefile  Makefile.am  aes.h  aes_func.c  des3_func.c  des_func.c  dh_func.c  digest.h  digest_func.c  driver.c  dsa_func.c  ec_func.c  md5.c  md5.h  misc_func.c  obj_mgmt.c  rijndael_func.c  rsa.h  rsa_func.c  sess_mgmt.c  sess_perf.c  ssl3_func.c
testcases/include/: Makefile.am  include.mk  mech_to_str.h  regress.h  rsadump.h  windows.h
testcases/init_tok/: Makefile  Makefile.am  init_tok.c
testcases/login/: Makefile.am  README  common.c  common.h  digest_init.c  init_pin.c  init_tok.c  login.c  login.mk  login_flags.c  login_test.sh  set_pin.c
testcases/misc_tests/: Makefile.am  README  aes-128.key  aes-192.key  always_auth.c  cca_ep11_export_import_test.c  cca_export_import_test.c  dh-key.pem  dsa-key.pem  dsa-param.pem  dual_functions.c  ec-key-prime256v1.pem  ec-key-secp521r1.pem  ed25519-private-key.pem  ed25519-public-key.pem  ed448-private-key.pem  ed448-public-key.pem  events.c  fork.c  ibm-dilithium-key.pem  ibm-dilithium-r3-65-key.pem  ibm-kyber-key.pem  migration.sh  misc_tests.mk  multi_instance.c  obj_lock.c  obj_mgmt.c  obj_mgmt_lock.c  p11kmip_test.sh  p11sak_dsa3072cert.crt  p11sak_dsa3072cert.pem  p11sak_dsa4096cert.crt  p11sak_dsa4096cert.pem  p11sak_ecp256cert.crt  p11sak_ecp256cert.pem  p11sak_ecp384cert.crt  p11sak_ecp384cert.pem  p11sak_ecp521cert.crt  p11sak_ecp521cert.pem  p11sak_ed25519cert.crt  (+24 more)
testcases/mkobj/: Makefile  Makefile.am  mkobj.c
testcases/multi_token_tests/: ock_multi_token.c
testcases/oc-digest/: Makefile  Makefile.am  digest_tests.sh  oc-digest.c
testcases/pkcs11/: Makefile.am  README  attribute.c  copyobjects.c  destroyobjects.c  findobjects.c  gen_purpose.c  generate_keypair.c  get_interface.c  getobjectsize.c  hw_fn.c  misc_func.c  pkcs11.mk  sess_mgmt.c  sess_opstate.c  sess_perf.c
testcases/policy/: policy.mk  policytest.c  policytest.sh.in
testcases/rsa_keygen/: Makefile  Makefile.am  rsa_keygen.c
testcases/rsa_test/: Makefile  Makefile.am  rsa_sign_test.c  rsa_test.c  rsa_test_genkey.c  rsa_thread_test.c
testcases/speed/: Makefile  Makefile.am  speed.c
testcases/test_crypto/: Makefile  Makefile.am  test_crypto.c
testcases/threadmkobj/: Makefile  Makefile.am  threadmkobj.c
testcases/tok_obj/: Makefile  Makefile.am  tok_des.c  tok_obj.c  tok_obj2.c  tok_rsa.c
testcases/unit/: asn1fuzztest.c  asn1test.c  asn1test_keys.c  asn1test_keys.h  asn1test_pqckeys.c  asn1test_pqckeys.h  asn1test_stubs.c  buffertest.c  configdump.c  hashmaptest.c  mechtabletest.c  objectflattentest.c  objecttest_stubs.c  pintest.c  pintest.sh  policytest.c  unit.mk  unittest.h  uritest.c
testcases/v2.11/: Makefile  Makefile.am  README  aes_func.c  hw_fn.c  login.c  rijndael.c
usr/: Makefile.am  usr.mk
usr/include/: Makefile.am  apiclient.h  apictl.h  ec_curves.h  events.h  include.mk  local_types.h  pkcs11.h  pkcs11types.h  pkcs32.h  pqc_oids.h  slotmgr.h  stdll.h
usr/include/pkcs11/: Makefile.am  apiclient.h  apictl.h  local_types.h  pkcs11err.h  pkcs11log.h  pkcs11o.h  pkcs11types.h  pkcs32.h  slotmgr.h  stdll.h  testcert.h
usr/lib/: Makefile.am  lib.mk
usr/lib/api/: api.mk  api_interface.c  apiproto.h  apiutil.c  hashmap.c  hashmap.h  mechtable.h  mechtable.inc  policy.c  policy.h  policyhelper.c  shrd_mem.c.in  socket_client.c  statistics.c  statistics.h  supportedstrengths.c  supportedstrengths.h
usr/lib/cca_stdll/: cca_func.h  cca_mkchange.c  cca_specific.c  cca_stdll.h  cca_stdll.mk  ccatok.conf  defs.h  tok_struct.h
usr/lib/common/: asn1.c  attributes.c  attributes.h  btree.c  buffer.c  buffer.h  cert.c  common.mk  configparser.h  constant_time.h  data_obj.c  decr_mgr.c  defs.h  dig_mgr.c  dlist.c  dlist.h  dp_obj.c  ec_curve_translation.c  ec_defs.h  ec_supported.c  encr_mgr.c  event_client.c  event_client.h  globals.c  h_extern.h  host_defs.h  hwf_obj.c  kdf_translation.c  key.c  key_mgr.c  lexer.l  list.h  loadsave.c  lock_btree.c  lock_sess_mgr.c  mech_aes.c  mech_des.c  mech_des3.c  mech_dh.c  mech_dsa.c  (+46 more)
usr/lib/config/: cfglex.l  cfgparse.y  cfgparser.h  config.mk  configuration.c  configuration.h
usr/lib/ep11_stdll/: ep11.h  ep11_func.h  ep11_login.c  ep11_mkchange.c  ep11_session.c  ep11_specific.c  ep11_specific.h  ep11_stdll.mk  ep11adm.h  ep11cpfilter.conf  ep11tok.conf  new_host.c  tok_struct.h
usr/lib/hsm_mk_change/: hsm_mk_change.c  hsm_mk_change.h  hsm_mk_change.mk
usr/lib/ica_s390_stdll/: ica_s390_stdll.mk  ica_specific.c  rsa_sup_mul.c  tok_struct.h
usr/lib/icsf_stdll/: icsf.c  icsf.h  icsf_config.h  icsf_config_lexer.l  icsf_config_parse.y  icsf_specific.c  icsf_specific.h  icsf_stdll.mk  new_host.c  pbkdf.c  pbkdf.h  tok_struct.h
usr/sbin/: Makefile.am  sbin.mk
(+447 files in other folders)
